--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
+    "recharts": "^3.7.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
