--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@tanstack/react-query": "^5.90.19",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
