--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # URL complète du webhook n8n pour le calcul de rentabilité
 # Format: https://votre-instance-n8n.com/webhook/votre-chemin
 NEXT_PUBLIC_N8N_WEBHOOK_URL=
+
+# Supabase configuration
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
