feat(auth): implementation of Better Auth with Email/Password and Google providers

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,14 @@ NEXT_PUBLIC_N8N_WEBHOOK_URL=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+DATABASE_URL= # Direct connection string (postgresql://...)
+
+# Better Auth configuration
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
