--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.94.1",
     "@tanstack/react-query": "^5.90.19",
+    "better-auth": "^1.4.18",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "14.2.21",
+    "pg": "^8.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/uuid": "^10.0.0",
