--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "better-auth": "^1.4.18",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
-    "next": "14.2.21",
+    "next": "^14.2.23",
     "pg": "^8.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
