--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,10 @@ _bmad
 .github/
 .gemini/
 gha-creds-*.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
