--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:regression": "vitest run src/server/calculations/__tests__/regression.test.ts",
-    "test:regression:watch": "vitest src/server/calculations/__tests__/regression.test.ts"
+    "test:regression:watch": "vitest src/server/calculations/__tests__/regression.test.ts",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -45,6 +47,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.21",
     "postcss": "^8.5.1",
+    "prettier": "^3.8.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^6.0.5",
