--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node scripts/migrate.mjs && next dev",
+    "db:migrate": "node scripts/migrate.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +24,7 @@
     "@tanstack/react-query": "^5.90.19",
     "better-auth": "^1.4.18",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "lucide-react": "^0.563.0",
     "next": "^14.2.23",
     "pg": "^8.18.0",
