Implémentation de l'envoie par mail du rapport + ajustements formulaire

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Email
+RESEND_API_KEY=
+EMAIL_SENDER="Renta Immo <onboarding@resend.dev>"
