--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.7.0",
     "resend": "^6.9.1",
     "uuid": "^13.0.0",
