--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,19 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+    ignore:
+      # Next.js: ignore major versions (14 -> 15+), only allow patch/minor
+      - dependency-name: "next"
+        update-types: ["version-update:semver-major"]
+      # React: ignore major versions (18 -> 19+)
+      - dependency-name: "react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "react-dom"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "@types/react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "@types/react-dom"
+        update-types: ["version-update:semver-major"]
+      # @types/uuid: ignore major versions (10 -> 11+)
+      - dependency-name: "@types/uuid"
+        update-types: ["version-update:semver-major"]
