chore: disable dependabot temporarily

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,31 +1,2 @@
 version: 2
-updates:
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
-    open-pull-requests-limit: 10
-    labels:
-      - "dependencies"
-      - "automerge"
-    commit-message:
-      prefix: "chore"
-      include: "scope"
-    ignore:
-      # Next.js: ignore major versions (14 -> 15+), only allow patch/minor
-      - dependency-name: "next"
-        update-types: ["version-update:semver-major"]
-      # React: ignore major versions (18 -> 19+)
-      - dependency-name: "react"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "react-dom"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "@types/react"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "@types/react-dom"
-        update-types: ["version-update:semver-major"]
-      # @types/uuid: ignore major versions (10 -> 11+)
-      - dependency-name: "@types/uuid"
-        update-types: ["version-update:semver-major"]
+updates: []
