chore: disable dependabot (open-pull-requests-limit: 0)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,2 +1,10 @@
+# Dependabot désactivé temporairement
+# Pour réactiver, décommenter la section updates ci-dessous
 version: 2
-updates: []
+updates:
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "monthly"
+      day: "monday"
+    open-pull-requests-limit: 0
