--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.16.0",
     "@types/react": "^18.3.18",
@@ -58,6 +60,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.21",
     "husky": "^9.1.7",
+    "jsdom": "^28.1.0",
     "lint-staged": "^16.2.7",
     "postcss": "^8.5.1",
     "prettier": "^3.8.1",
