--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ on:
       - '*.md'
       - '.github/workflows/gemini-*.yml'
 
+permissions:
+  contents: read
+  pull-requests: write
+
 # Variables CI partagées entre tous les jobs
 # Les valeurs réelles (Supabase, auth) viennent des secrets GitHub
 # Les valeurs factices satisfont les fail-fast au module load sans connexion réelle
