test(integration): ajout cas limites HCSF=35% et IS<=42.5k
Refs PR #53

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,7 @@ jobs:
           name: integration-test-results
           path: |
             coverage/
+          if-no-files-found: ignore
           retention-days: 7
 
   build:
